Fix: 알림창 hover시 z-index수정

--- a/src/components/common/Header/Notification.module.scss
+++ b/src/components/common/Header/Notification.module.scss
@@ -44,7 +44,7 @@
   height: 2.4rem;
   cursor: pointer;
   transition: transform 0.3s ease;
-
+  z-index: 1000;
   &::after {
     content: '';
     position: absolute;
